--- a/resources/less/web/copyright.less
+++ b/resources/less/web/copyright.less
@@ -1,10 +1,13 @@
 .copyright {
     display: flex;
-    font-size: .8em;
     padding: .5em;
+    font-size: .8em;
+    justify-content: center;
+    text-align: center;
 
     a{
         line-height: 0;
+        
         &:hover{
             cursor: text;
         }
