--- a/resources/less/common/body.less
+++ b/resources/less/common/body.less
@@ -9,6 +9,7 @@ body {
     font-size: @base_font_size;
     font-family: @base_font_family;
     font-weight: 500;
+    background-color: #f1f1f1;
 }
 
 body, h1, h2, h3, h4, h5, h6, p, ol, ul, li{
@@ -23,6 +24,6 @@ a{
     color: #1d1d1d;
     
     &:visited{
-        color: #1d1d1d;
+        color: #4f4f4f;
     }
 }
