--- a/resources/less/partial/author.less
+++ b/resources/less/partial/author.less
@@ -1,11 +1,12 @@
 .author{
     display: grid;
-    grid-template: auto / auto 1fr;
-    grid-auto-flow: column;
+    grid-template: auto / 1fr;
+    place-items: center;
     grid-column-gap: 1em;
 
     &_thumbnail{
         border-radius: 50%;
+        border: solid .5em #fff;
         height: 8em;
         width: 8em;
         display: flex;
@@ -17,5 +18,30 @@
     &_description{
         display: flex;
         place-items: center;
+        padding: 1em;
+    }
+}
+
+@media @desktop{
+    .author{
+        display: grid;
+        grid-template: auto / auto 1fr;
+        grid-auto-flow: column;
+        grid-column-gap: 1em;
+
+        &_thumbnail{
+            border-radius: 50%;
+            height: 8em;
+            width: 8em;
+            display: flex;
+            place-content: center;
+            overflow: hidden;
+            place-items: center;
+        }
+        
+        &_description{
+            display: flex;
+            place-items: center;
+        }
     }
 }
