--- a/resources/less/web/contact.less
+++ b/resources/less/web/contact.less
@@ -1,14 +1,10 @@
-/* ===== F O R M ===== */
 .contact{
-    margin: 2em auto;
+    margin: 2em;
     padding: 1em;
-    width: 50%; 
     box-shadow: 0em 0.2em 0.4em 0em #00000033;
     box-sizing: border-box;
     border-radius: .5em;
-    // border: solid 1px #d7d7d7;
     border: solid 1px   #b1b1b1;
-  
     background-color: #fff;
 
     .form-group{
