--- a/resources/less/web/layout.less
+++ b/resources/less/web/layout.less
@@ -1,6 +1,6 @@
 .user-layout {
     display: grid;
-    grid-template: auto auto auto / 100vw;
+    grid-template: auto 1fr auto / 100vw;
     height: inherit;
     // overflow-y: scroll;
 }
@@ -49,10 +49,10 @@
         display:grid;
         grid-template: repeat(2, 1fr) auto / minmax(auto, 240px) repeat(5, 1fr);
     }
-    .header-container{
+    .header{
         grid-row: 1/ 3;
         grid-column: 1/ 2;
-        max-height: initial;
+        height: initial;
         max-width: 250px;
         display: grid;
         grid-template: auto 1fr / 1fr;
@@ -61,9 +61,6 @@
         border-right: solid 0.1px #cac9c7;
         box-shadow: 0.1em -0.2em 0.2em 0em #00000033
    
-    }
-    .transparent-header-container{
-        display: block;
     }
     .desktop-container{
         grid-row: 1 / 4;
