--- a/resources/less/web/contact.less
+++ b/resources/less/web/contact.less
@@ -77,3 +77,9 @@
         grid-column-gap: 20px;
     }
 }
+@media @desktop{
+    .contact{
+        width: 50%;
+        margin: 2em auto;
+    }
+}
