--- a/resources/less/partial/author.less
+++ b/resources/less/partial/author.less
@@ -14,11 +14,14 @@
         overflow: hidden;
         place-items: center;
     }
-    
+
     &_description{
         display: flex;
         place-items: center;
         padding: 1em;
+        margin: 0 1em;
+        background-color: fade(#000, 40%);
+        border-radius: .5em;
     }
 }
 
@@ -38,7 +41,7 @@
             overflow: hidden;
             place-items: center;
         }
-        
+
         &_description{
             display: flex;
             place-items: center;
