--- a/resources/less/web/about/about.less
+++ b/resources/less/web/about/about.less
@@ -10,7 +10,7 @@
     &-author{
         border-radius: 5em 5em 1em 1em;
         background-repeat: no-repeat;
-        background-size: fill;
+        background-size: 100% 200%;
         background-position: center;
         color: #fff;
         font-weight: 600;
@@ -19,7 +19,7 @@
     }
 
     &-section{
-        
+
         display: grid;
         grid-template: auto 1fr auto / auto;
         grid-row-gap: 1em;
@@ -28,23 +28,23 @@
         border-radius: .5em;
         box-shadow: 0em 0.2em 0.4em 0em #00000033;
 
-        
+
 
         &_header{
             border-radius: 0 .5em 0 0 !important;
-            
+
             &-icon{
             }
             &-name{
             }
         }
-    
+
         &_body{
             padding: 1em;
         }
 
         &_footer{
-            
+
         }
     }
 }
@@ -55,47 +55,46 @@
         grid-template: auto / 1fr 1fr;
         grid-column-gap: 2em;
         grid-row-gap: 2em;
-        margin: 2em 4em;
+        margin: 2em auto;
+        width: 70%;
 
         &-author{
             grid-column: span 2;
             border-radius: 5em 1em 1em 5em;
             background-repeat: no-repeat;
-            background-size: fill;
+            background-size: 100%;
             background-position: center;
             color: #fff;
             font-weight: 600;
             padding: 0;
-
         }
-    
+
         &-section{
-            
+
             display: grid;
             grid-template: auto 1fr auto / auto;
             grid-row-gap: 1em;
             background-color: #fff;
             border: solid 1px   #b1b1b17c;
-            border-radius: .5em;
+            border-radius: 1em .5em .5em .5em;
             box-shadow: 0em 0.2em 0.4em 0em #00000033;
 
-            
-
             &_header{
-                border-radius: 0 .5em 0 0 !important;
-                
+                border-radius: 1em .5em 0 0 !important;
+
                 &-icon{
+                    left: -0.3em !important;
                 }
                 &-name{
                 }
             }
-        
+
             &_body{
                 padding: 1em;
             }
 
             &_footer{
-                
+
             }
         }
     }
