--- a/resources/less/web/portfolio/portfolio.less
+++ b/resources/less/web/portfolio/portfolio.less
@@ -67,7 +67,7 @@
 @media @desktop{
     .portfolio{
         margin: 2em auto;
-        width: 70%;
+        width: 75%;
 
         &-projects{
             display: flex;
@@ -89,6 +89,20 @@
                 background-size: contain;
 
                 &_title{
+                    display: flex;
+                    align-items: center;
+                    margin: 0 .5em;
+                    padding: 1em;
+                    background-color: fade(#000, 50%);
+                    border-radius: .5em;
+                    color:#fff;
+                    
+
+                    &:hover{
+                        width: 100%;
+                        height: 100%;
+                        margin: 0;
+                    }
                 }
             }
         }
