--- a/resources/less/common/body.less
+++ b/resources/less/common/body.less
@@ -9,7 +9,7 @@ body {
     font-size: @base_font_size;
     font-family: @base_font_family;
     font-weight: 500;
-    background-color: #f1f1f1;
+    // background-color: #f1f1f1;
 }
 
 body, h1, h2, h3, h4, h5, h6, p, ol, ul, li{
